[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/GraphicInterface/Inventory/InventoryContainer.gd" type="Script" id=1]
[ext_resource path="res://src/GraphicInterface/Inventory/bg.png" type="Texture" id=2]
[ext_resource path="res://src/GraphicInterface/Inventory/fg.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/kg-happy.solid.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/GraphicInterface/Inventory/courage_progress.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 4 )

[node name="InventoryContainer" type="NinePatchRect"]
margin_left = 4.0
margin_right = 1091.0
margin_bottom = 225.0
rect_min_size = Vector2( 388, 136 )
mouse_filter = 0
texture = ExtResource( 2 )
patch_margin_left = 294
patch_margin_top = 104
patch_margin_right = 25
patch_margin_bottom = 29
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="InventoryPanel" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryGrid" type="GridContainer" parent="InventoryPanel"]
margin_left = 4.0
margin_top = 2.0
margin_right = 1083.0
margin_bottom = 201.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 8

[node name="CourageContainer" type="HBoxContainer" parent="InventoryPanel"]
margin_left = 4.0
margin_top = 149.0
margin_right = 1083.0
margin_bottom = 201.0
mouse_filter = 2
size_flags_vertical = 8
custom_constants/separation = 24
alignment = 1

[node name="CourageLabel" type="Label" parent="InventoryPanel/CourageContainer"]
margin_left = 35.0
margin_right = 620.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "InventoryContainer-Courage"
valign = 1

[node name="Courage" type="TextureProgress" parent="InventoryPanel/CourageContainer"]
margin_left = 644.0
margin_top = 14.0
margin_right = 1044.0
margin_bottom = 38.0
mouse_filter = 2
size_flags_vertical = 4
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
tint_under = Color( 0.0745098, 0.0470588, 0.0666667, 1 )
nine_patch_stretch = true
stretch_margin_left = 200
stretch_margin_top = 12
stretch_margin_right = 200
stretch_margin_bottom = 12

[node name="InventoryForeground" type="TextureRect" parent="."]
margin_right = 1087.0
margin_bottom = 225.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
